test/parser/missing_semi.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    1
// CHECK: [[# @LINE ]]:1: error: expected ';' at the end of expression
}
